--- a/index.html
+++ b/index.html
@@ -548,10 +548,10 @@
             </div>
           </div>
           <div class=card>
-            <div class=image>
-              <img href="https://climateresilient.world/" src='./img/sponsor/termius.png'>
+            <div class=image style="min-height: 100px;">
+              <img href="https://climateresilient.world/" src='./img/sponsor/termius.png' style="width: 100%;height: auto;">
             </div>
-            <h3 class="modgud" style="padding-bottom: 10px;">Convert CAMS react desktop site to mobile app</h3>
+            <h3 class="modgud" style="padding-bottom: 10px;top:-22px">Convert CAMS react desktop site to mobile app</h3>
             <div class=content>
               <h3 style="padding-bottom: 10px;">Convert CAMS react desktop site to mobile app</h3>
               <ul>
@@ -589,20 +589,19 @@
       <div
         style="width: 100%; display: flex; justify-content: center;align-items: center;flex-direction: column;background-image: url(./images/78255-background-looping-animation.gif); background-position:center;">
         <div style="padding-bottom: 25px;" id="speakers"></div>
-        <div class="Prizes-heading glitch2" data-glitch2='PAST SPEAKERS'
-          style="color: white;background-color: transparent;" >PAST
-          SPEAKERS</div>
+        <div class="Prizes-heading glitch2" data-glitch2='SPEAKERS'
+          style="color: white;background-color: transparent;" >SPEAKERS</div>
         <div class="speakers-card-main" style="margin-bottom: 50px;width:80%;justify-content:center;">
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/Santosh_Yadav.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Gavin Mendel-Gleason.jpg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
               <h1 class="speaker-name">
-                Santosh Yadav</h1>
-              <div class="speaker-content">Google Developer Expert for Angular</div>
+                Gavin Mendel Gleason</h1>
+              <div class="speaker-content">Chief Technology Officer at TerminusDB</div>
               <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/santoshyadavdev/" target="_blank">
+                <a href="https://www.linkedin.com/in/sarfaraz-hussain-8123b4132/?originalSubdomain=in">
                   <i class="fab fa-linkedin"
                     style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
                 </a>
@@ -610,6 +609,7 @@
               </div>
             </div>
           </div>
+          
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
               <img src="./images/Ameen.jpeg" style="border-radius: 50%; height: auto; width: 80%;">
@@ -646,82 +646,14 @@
           </div>
           <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
             <div class="user-img">
-              <img src="./images/Gavin Mendel-Gleason.jpg" style="border-radius: 50%; height: auto; width: 80%;">
+              <img src="./images/Santosh_Yadav.jpg" style="border-radius: 50%; height: auto; width: 80%;">
             </div>
             <div class="stat">
               <h1 class="speaker-name">
-                Gavin Mendel-Gleason</h1>
-              <div class="speaker-content">Chief Technology Officer at TerminusDB</div>
+                Santosh Yadav</h1>
+              <div class="speaker-content">Google Developer Expert for Angular</div>
               <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/sarfaraz-hussain-8123b4132/?originalSubdomain=in">
-                  <i class="fab fa-linkedin"
-                    style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
-                </a>
-
-              </div>
-            </div>
-          </div>
-          <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
-            <div class="user-img">
-              <img src="./images/vilva.jpg" style="border-radius: 50%; height: auto; width: 80%;">
-            </div>
-            <div class="stat">
-              <h1 class="speaker-name">
-                Vilva Athiban</h1>
-              <div class="speaker-content">Senior Engineer At Omio</div>
-              <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/vilvaathiban/">
-                  <i class="fab fa-linkedin"
-                    style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
-                </a>
-
-              </div>
-            </div>
-          </div>
-          <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
-            <div class="user-img">
-              <img src="./images/ben.jpg" style="border-radius: 50%; height: auto; width: 80%;">
-            </div>
-            <div class="stat">
-              <h1 class="speaker-name">
-                Ben Dechrai</h1>
-              <div class="speaker-content">Community And Developer Advocate</div>
-              <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/bendechrai/?originalSubdomain=au">
-                  <i class="fab fa-linkedin"
-                    style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
-                </a>
-
-              </div>
-            </div>
-          </div>
-          <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
-            <div class="user-img">
-              <img src="./images/mario.jpg" style="border-radius: 50%; height: auto; width: 80%;">
-            </div>
-            <div class="stat">
-              <h1 class="speaker-name">
-                Mario Behling</h1>
-              <div class="speaker-content">Co-Founder Of FOSSASIA</div>
-              <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/mariobehling/?originalSubdomain=de">
-                  <i class="fab fa-linkedin"
-                    style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
-                </a>
-
-              </div>
-            </div>
-          </div>
-          <div class="card-speaker" style="margin-left: 25px;margin-right:25px;" data-aos="fade-up">
-            <div class="user-img">
-              <img src="./images/betina.jpg" style="border-radius: 50%; height: auto; width: 80%;">
-            </div>
-            <div class="stat">
-              <h1 class="speaker-name">
-                Betina Simeonova</h1>
-              <div class="speaker-content">Transformation And Change Management</div>
-              <div class="speaker-handle">
-                <a href="https://www.linkedin.com/in/betinasimeonova/?originalSubdomain=uk">
+                <a href="https://www.linkedin.com/in/santoshyadavdev/" target="_blank">
                   <i class="fab fa-linkedin"
                     style="font-size: 20px;background-color:white;padding:5px;color:black;border-radius:2px;"></i>
                 </a>
