Added drive links

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
        <p>API-First</p>
       </a>
         </section>
-        <button data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+        <button data-aos="fade-up" data-aos-anchor-placement="top-bottom" onclick="theme_drive()"
           class="btn-clear btn-light btn-glitch theme-btn" style="
             align-self: center;
             margin: 20px;
@@ -350,7 +350,7 @@
           ">
           READ MORE ABOUT OUR THEME
         </button>
-        <button data-aos="fade-up" data-aos-anchor-placement="top-bottom"
+        <button data-aos="fade-up" data-aos-anchor-placement="top-bottom" onclick="judge_drive()"
           class="btn-clear btn-light btn-glitch theme-btn" style="
             align-self: center;
             width: 280px;
