--- a/live.html
+++ b/live.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta http-equiv="cache-control" content="no-cache">
     <meta charset="UTF-8" />
     <title>HackOFiesta</title>
     <link rel="icon" href="./images/Artboard 5.svg" type="image/gif" sizes="16x16">
