--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css"
     integrity="sha384-Bfad6CLCknfcloXFOyFnlgtENryhrpZCe29RTifKEixXQZ38WheV+i/6YWSzkz3V" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-  <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
   <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -20,7 +20,6 @@
     window.dataLayer = window.dataLayer || [];
     function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
-
     gtag('config', 'G-HN6QQW6NCN');
   </script>
 </head>
@@ -337,32 +336,16 @@
        <p>API-First</p>
       </a>
         </section>
+        <div class="judging-read">
         <button data-aos="fade-up" data-aos-anchor-placement="top-bottom"
-          class="btn-clear btn-light btn-glitch theme-btn" style="
-            align-self: center;
-            margin: 20px;
-            width: 280px;
-            padding: 15px;
-            padding-top: 20px;
-            padding-bottom: 20px;
-            margin-top: 45px;
-            cursor: pointer;
-          ">
+          class="btn-clear btn-light btn-glitch theme-btn theme-btn-1" >
           READ MORE ABOUT OUR THEME
         </button>
         <button data-aos="fade-up" data-aos-anchor-placement="top-bottom"
-          class="btn-clear btn-light btn-glitch theme-btn" style="
-            align-self: center;
-            width: 280px;
-            padding: 15px;
-            padding-top: 18px;
-            padding-bottom: 18px;
-            margin: 15px;
-            margin-bottom: 55px;
-            cursor: pointer;
-          ">
+          class="btn-clear btn-light btn-glitch  theme-btn theme-btn-1" >
           JUDGING CRITERIA
         </button>
+        </div>
       </div>
       <div class="prizes-main">
         <div style="padding-bottom: 25px;" id="prizes"></div>
@@ -464,7 +447,7 @@
                   Eligibility to apply for internship/full-time roles and seed funding of up to 5,000 USD for winners!
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://www.notion.so/Polygon-Devfolio-Hackathon-Season-Prize-de8961d5eeff4780963749da0b75037c">See
                   More</a></button>
             </div>
@@ -484,7 +467,7 @@
                   Eligibility for internship/full-time role interviews and seed funding of upto 5000 USD
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://www.notion.so/Polygon-Devfolio-Hackathon-Season-Prize-de8961d5eeff4780963749da0b75037c">See
                   More</a></button>
             </div>
@@ -505,7 +488,7 @@
                     href="https://github.com/filecoin-project/devgrants/blob/master/README.md">here</a>
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://www.notion.so/Filecoin-Devfolio-Hackathon-Season-Prize-998fc3fe477e474086ae1d5ed1685203">See
                   More</a></button>
             </div>
@@ -525,7 +508,7 @@
                   Continuity grant opportunity up to 5,000 USD for an outstanding project.
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://www.notion.so/Tezos-Devfolio-Hackathon-Season-Prize-e90b6811b0df43e5a7dadf534fc000ff">See
                   More</a></button>
             </div>
@@ -542,7 +525,7 @@
                   ₹20,000 for best Dapp built on Celo
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://www.notion.so/Celo-Devfolio-Hackathon-Season-Prize-8b98dac17f134abeae863d5d98c01ff0">See
                   More</a></button>
             </div>
@@ -562,7 +545,7 @@
                   For a team - Max of 4 participants ₹4000 each
                 </li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a
                   href="https://github.com/CriticalAssetManagement">See
                   More</a></button>
             </div>
@@ -580,7 +563,7 @@
                 <li>Second prize - 7500 INR</li>
                 <li>Goodies and merch for all people with valid submissions</li>
               </ul>
-              <button class="btn-clear btn-light btn-glitch theme-btn"><a href="https://docs.koii.network/">See
+              <button class="btn-clear btn-light btn-glitch theme-btn" style="border: none;"><a href="https://docs.koii.network/">See
                   More</a></button>
             </div>
           </div>
@@ -1600,7 +1583,7 @@
   <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.4/TweenMax.min.js"></script>
   <script src="./script.js"></script>
-  <!-- <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
 
   <script>
