--- a/index.html
+++ b/index.html
@@ -561,7 +561,7 @@
           </div>
           <div class=card>
             <div class=image>
-              <img href="https://climateresilient.world/" src='./img/sponsor/termius.png'>
+              <img style="height:auto" href="https://climateresilient.world/" src='./img/sponsor/termius.png'>
             </div>
             <h3 class="modgud" style="padding-bottom: 10px;">Convert CAMS react desktop site to mobile app</h3>
             <div class=content>
