--- a/index.html
+++ b/index.html
@@ -583,20 +583,6 @@
               >
             </div>
             <div class="prize-cards">
-              <!-- <div class="conteneur" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-            <div class="card">
-              <div class="boite" onmouseenter="pmd5()" onmouseleave="pmdo5()">
-                <div class="contenu">
-                  <img src="./images/trophy.png" style="width: 50%;height: auto;" class="trophy">
-                  <h4 class="theme-name">ALL GIRLS TRACK</h4>
-                  <h4 class="theme-name-1">Coming Soon</h4>
-                </div>
-              </div>
-              <h4 style="position: absolute; bottom: 0;left: 35%;font-style: normal;padding-bottom: 15px;display: none;"
-                class="prize-money">7,000 /-</h4>
-            </div>
-          </div> -->
-
               <div class="prizecard-2">
                 <div class="page-content-pr">
                   <div
@@ -609,9 +595,6 @@
                     "
                   >
                     <div class="content-pr">
-                      <!-- <div style="">
-                  <h2 class="title-pr">2nd Prize</h2>
-                  </div> -->
                       <h2 class="title-pr" style="background-color: #937a4d">
                         1st
                         <span>
@@ -621,12 +604,13 @@
                         <span></span>
                       </h2>
                       <p class="copy-pr">
-                        <li>₹15000/-</li>
-                        <!-- <li>₹1200/- GFG-discount coupon</li>
-                    <li>30% Discount from Badelog</li>
-                    <li>250 Clarity Coins from Simpliclarify</li>
-                    <li>1 year License of Axure-RP Team Plan</li>
-                    <li>Lifetime upgrade of Taskade</li> -->
+                        <li>Extended 3 month trial period by Echo3D</li>
+                        <li>Three month Hacker plans</li> 
+                        <li>6 months free plan of voiceflow pro</li>
+                        <li>Free Taskade Upgrades</li>
+                        <li>Free 90-day trial for balsamiq cloud</li>
+                        <li>25% off the first year of 1Password Families.</li>
+                        <li>Hackofiesta E-Certificates with lifetime validity</li>
                       </p>
                     </div>
                   </div>
@@ -654,12 +638,13 @@
                         <span></span>
                       </h2>
                       <p class="copy-pr">
-                        <li>₹25000/-</li>
-                        <!-- <li>₹1200/- GFG-discount coupon</li>
-                    <li>30% Discount from Badelog</li>
-                    <li>250 Clarity Coins from Simpliclarify</li>
-                    <li>1 year License of Axure-RP Team Plan</li>
-                    <li>Lifetime upgrade of Taskade</li> -->
+                        <li>Extended 3 month trial period by Echo3D</li>
+                        <li>Three month Hacker plans</li> 
+                        <li>6 months free plan of voiceflow pro</li>
+                        <li>Free Taskade Upgrades</li>
+                        <li>Free 90-day trial for balsamiq cloud</li>
+                        <li>25% off the first year of 1Password Families.</li>
+                        <li>Hackofiesta E-Certificates with lifetime validity</li>
                       </p>
                     </div>
                   </div>
@@ -687,12 +672,73 @@
                         <span></span>
                       </h2>
                       <p class="copy-pr">
-                        <li>₹10000/-</li>
-                        <!-- <li>₹1200/- GFG-discount coupon</li>
-                    <li>30% Discount from Badelog</li>
-                    <li>250 Clarity Coins from Simpliclarify</li>
-                    <li>1 year License of Axure-RP Team Plan</li>
-                    <li>Lifetime upgrade of Taskade</li> -->
+                        <li>Extended 3 month trial period by Echo3D</li>
+                        <li>Three month Hacker plans</li> 
+                        <li>6 months free plan of voiceflow pro</li>
+                        <li>Free Taskade Upgrades</li>
+                        <li>Free 90-day trial for balsamiq cloud</li>
+                        <li>25% off the first year of 1Password Families.</li>
+                        <li>Hackofiesta E-Certificates with lifetime validity</li>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="prizecard-2">
+                <div class="page-content-pr">
+                  <div
+                    class="card-pr"
+                    style="
+                      background-image: url(./images/track.jpg);
+                      background-size: 110%;
+                      background-repeat: no-repeat;
+                      background-position: center;
+                    "
+                  >
+                    <div class="content-pr">
+                      <!-- <h2 class="title-pr">1st Prize</h2> -->
+                      <h2 class="beginner title-pr" style="background-color: #79BC9E">
+                          <span>Beginner's </span>Track
+                        <span style="font-size: 2rem;"> ₹8,000</span>
+                      </h2>
+                      <p class="copy-pr">
+                        <li>Extended 3 month trial period by Echo3D</li>
+                        <li>Three month Hacker plans</li> 
+                        <li>6 months free plan of voiceflow pro</li>
+                        <li>Free Taskade Upgrades</li>
+                        <li>Free 90-day trial for balsamiq cloud</li>
+                        <li>25% off the first year of 1Password Families.</li>
+                        <li>Hackofiesta E-Certificates with lifetime validity</li>
+                      </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="prizecard-2">
+                <div class="page-content-pr">
+                  <div
+                    class="card-pr"
+                    style="
+                      background-image: url(./images/track.jpg);
+                      background-size: 110%;
+                      background-repeat: no-repeat;
+                      background-position: center;
+                    "
+                  >
+                    <div class="content-pr">
+                      <!-- <h2 class="title-pr">1st Prize</h2> -->
+                      <h2 class="beginner title-pr" style="background-color: #AE8089">
+                        <span>All girl's </span>Track
+                      <span style="font-size: 2rem;"> ₹7,000</span>
+                    </h2>
+                      <p class="copy-pr">
+                        <li>Extended 3 month trial period by Echo3D</li>
+                        <li>Three month Hacker plans</li> 
+                        <li>6 months free plan of voiceflow pro</li>
+                        <li>Free Taskade Upgrades</li>
+                        <li>Free 90-day trial for balsamiq cloud</li>
+                        <li>25% off the first year of 1Password Families.</li>
+                        <li>Hackofiesta E-Certificates with lifetime validity</li>
                       </p>
                     </div>
                   </div>
