--- a/index.html
+++ b/index.html
@@ -1023,7 +1023,7 @@
                   </div>
                   <div class="speaker-handle">
                     <a
-                      href="https://www.linkedin.com/in/sarfaraz-hussain-8123b4132/?originalSubdomain=in"
+                      href="https://www.linkedin.com/in/gavinmendelgleason/" target="_blank"
                     >
                       <i
                         class="fab fa-linkedin"
@@ -1056,7 +1056,7 @@
                   <div class="speaker-content">CEO of INFINITEWARE</div>
                   <div class="speaker-handle">
                     <a
-                      href="https://www.linkedin.com/in/ganswami/?originalSubdomain=ca"
+                      href="https://www.linkedin.com/in/altajer/" target="_blank"
                     >
                       <i
                         class="fab fa-linkedin"
@@ -1088,7 +1088,7 @@
                   <div class="speaker-content">Founder geek97</div>
                   <div class="speaker-handle">
                     <a
-                      href="https://www.linkedin.com/in/harish-raisinghani-yvr/?originalSubdomain=ca"
+                      href="https://www.linkedin.com/in/dhananjaykumar07/" target="_blank"
                     >
                       <i
                         class="fab fa-linkedin"
@@ -1122,8 +1122,72 @@
                   </div>
                   <div class="speaker-handle">
                     <a
-                      href="https://www.linkedin.com/in/santoshyadavdev/"
+                      href="https://www.linkedin.com/in/santoshyadavdev/" target="_blank"
                       target="_blank"
+                    >
+                      <i
+                        class="fab fa-linkedin"
+                        style="
+                          font-size: 20px;
+                          background-color: white;
+                          padding: 5px;
+                          color: black;
+                          border-radius: 2px;
+                        "
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card-speaker"
+                style="margin-left: 25px; margin-right: 25px"
+                data-aos="fade-up"
+              >
+                <div class="user-img">
+                  <img
+                    src="./images/chinmoy.jpg"
+                    style="border-radius: 50%; height: auto; width: 80%"
+                  />
+                </div>
+                <div class="stat">
+                  <h1 class="speaker-name">Chinmoy Joshi</h1>
+                  <div class="speaker-content">Architect at Microsoft</div>
+                  <div class="speaker-handle">
+                    <a
+                      href="https://www.linkedin.com/in/chinmoyjoshi/" target="_blank"
+                    >
+                      <i
+                        class="fab fa-linkedin"
+                        style="
+                          font-size: 20px;
+                          background-color: white;
+                          padding: 5px;
+                          color: black;
+                          border-radius: 2px;
+                        "
+                      ></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+              <div
+                class="card-speaker"
+                style="margin-left: 25px; margin-right: 25px"
+                data-aos="fade-up"
+              >
+                <div class="user-img">
+                  <img
+                    src="./images/Srasthi.jpg "
+                    style="border-radius: 50%; height: auto; width: 80%"
+                  />
+                </div>
+                <div class="stat">
+                  <h1 class="speaker-name">Srashti Jain</h1>
+                  <div class="speaker-content">Founder at TechVraksh</div>
+                  <div class="speaker-handle">
+                    <a
+                      href="https://www.linkedin.com/in/srashtisj/a" target="_blank"
                     >
                       <i
                         class="fab fa-linkedin"
