--- a/index.html
+++ b/index.html
@@ -1178,8 +1178,8 @@
               >
                 <div class="user-img">
                   <img
-                    src="./images/Srasthi.jpg "
-                    style="border-radius: 50%; height: auto; width: 80%"
+                    src="./images/Srashti Jain.jpg"
+                    style="border-radius: 50% !important; height: auto; width: 80%"
                   />
                 </div>
                 <div class="stat">
